vlib/v/checker/tests/cast_err.out
vlib/v/checker/tests/cast_err.vv:3:6: error: cannot cast to bool - use e.g. `some_int != 0` instead
    1 | fn test_bool_cast() {
    2 |     v := 3
    3 |     _ = bool(v)
      |         ~~~~~~~
    4 |     _ = bool(&v)
    5 |     _ = bool([2])
vlib/v/checker/tests/cast_err.vv:4:6: error: cannot cast to bool - use e.g. `some_int != 0` instead
    2 |     v := 3
    3 |     _ = bool(v)
    4 |     _ = bool(&v)
      |         ~~~~~~~~
    5 |     _ = bool([2])
    6 | }
vlib/v/checker/tests/cast_err.vv:5:6: error: cannot cast to bool - use e.g. `some_int != 0` instead
    3 |     _ = bool(v)
    4 |     _ = bool(&v)
    5 |     _ = bool([2])
      |         ~~~~~~~~~
    6 | }
    7 |
vlib/v/checker/tests/cast_err.vv:9:6: error: unknown type `Foo`
    7 | 
    8 | fn unknown() {
    9 |     _ = Foo(3)
      |         ~~~~~~
   10 | }